force-app/main/default/objects/Cancellation__c/Cancellation__c.object-meta.xml
<CustomObject>
    <description>A new cancellation object, to delineate from the complaint object, with the goal to be task driven.</description>
    <label>Cancellation</label>
    <nameField>
        <label>Cancellation Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cancellations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>