force-app/main/default/objects/Cancellation__c/fields/AM_Assigned__c.field-meta.xml
<CustomField>
    <fullName>AM_Assigned__c</fullName>
    <formula>Boom_Order__r.Opportunity__r.Owner.User_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Assigned</label>
    <type>Text</type>
</CustomField>