force-app/main/default/objects/Cancellation__c/fields/AM_Assigned_ID__c.field-meta.xml
<CustomField>
    <fullName>AM_Assigned_ID__c</fullName>
    <formula>Boom_Order__r.Opportunity__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Assigned ID</label>
    <type>Text</type>
</CustomField>