force-app/main/default/objects/Cancellation__c/fields/Boom_Order__c.field-meta.xml
<CustomField>
    <fullName>Boom_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Boom order that was requested to be cancelled</description>
    <inlineHelpText>Contact IT for help</inlineHelpText>
    <label>Boom Order</label>
    <referenceTo>SalesOrder__c</referenceTo>
    <relationshipLabel>Cancellations</relationshipLabel>
    <relationshipName>Cancellations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>