force-app/main/default/objects/Cancellation__c/fields/CancellationDesctiption__c.field-meta.xml
<CustomField>
    <fullName>CancellationDesctiption__c</fullName>
    <description>Long Text field for Cancellation description,</description>
    <label>Cancellation Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>