force-app/main/default/objects/Cancellation__c/fields/Client_Check_In_Logged__c.field-meta.xml
<CustomField>
    <fullName>Client_Check_In_Logged__c</fullName>
    <description>Was the client check in appointment logged?</description>
    <label>Client Check In Logged</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>