force-app/main/default/objects/Cancellation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The contact related to the order which was requested to be cancelled.</description>
    <inlineHelpText>Contact IT for help</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cancellations</relationshipLabel>
    <relationshipName>Cancellations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>