force-app/main/default/objects/Cancellation__c/fields/CSR_Assigned__c.field-meta.xml
<CustomField>
    <fullName>CSR_Assigned__c</fullName>
    <formula>Fulfillment__r.Fulfillment_Owner_Fullname__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSR Assigned</label>
    <type>Text</type>
</CustomField>