force-app/main/default/objects/Cancellation__c/fields/Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Fulfillment related to the Boom order which was requested to be cancelled</description>
    <label>Fulfillment</label>
    <referenceTo>Fulfillment__c</referenceTo>
    <relationshipLabel>Cancellations</relationshipLabel>
    <relationshipName>Cancellations</relationshipName>
    <type>Lookup</type>
</CustomField>