force-app/main/default/objects/Cancellation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The current status of the cancelation process.</description>
    <inlineHelpText>Contact IT for help.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>In_-_Progress</fullName>
                <label>In - Progress</label>
            </value>
            <value>
                <fullName>Closed_-_Saved</fullName>
                <label>Closed - Saved</label>
            </value>
            <value>
                <fullName>Closed - Cancelled</fullName>
            </value>
            <value>
                <fullName>Closed - Cancelled No Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>